--- a/Frontend/src/styles/Navbar.css
+++ b/Frontend/src/styles/Navbar.css
@@ -16,7 +16,7 @@
   padding: 30px 0;
 }
 
-.header-container {
+.nav-container {
   display: flex;
   flex-direction: column;
   align-items: center;
